<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="146.2dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/img1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="146.2dp"
            android:text="@string/_2"
            android:textSize="30sp"/>

        <Button
            android:layout_width="146.2dp"
            android:layout_height="146.2dp"
            android:text="@string/DontSleep"
            android:textSize="30sp"
            />
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="146.2dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/img2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="146.2dp"
            android:text="@string/rota2"
            android:textSize="30sp"/>
        <Button
            android:layout_width="146.2dp"
            android:layout_height="146.2dp"
            android:text="@string/no"
            android:textSize="30sp"/>
    </TableRow>
    <TableRow
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
    <ImageView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/img3" />
    <TextView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/moba2"
        android:textSize="30sp"/>
    <Button
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/yes"
        android:textSize="30sp"/>
</TableRow>
    <TableRow
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
    <ImageView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/img4" />
    <TextView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/azimut"
        android:textSize="30sp"/>
    <Button
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/work"
        android:textSize="30sp"/>
</TableRow>
    <TableRow
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
    <ImageView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/img5" />
    <TextView
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/_22g1"
        android:textSize="30sp"/>
    <Button
        android:layout_width="146.2dp"
        android:layout_height="146.2dp"
        android:text="@string/conteiner"
        android:textSize="30sp"/>
</TableRow>


</TableLayout>
